--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Graphql study and implementation repository",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,12 +23,17 @@
     "url": "https://github.com/henriquebortoletto/graphql/issues"
   },
   "homepage": "https://github.com/henriquebortoletto/graphql#readme",
+  "dependencies": {
+    "apollo-server": "^3.6.7",
+    "graphql": "^16.4.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "nodemon": "^2.0.15"
   },
   "config": {
     "commitizen": {
