--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/henriquebortoletto/graphql#readme",
   "dependencies": {
     "apollo-server": "^3.6.7",
+    "apollo-server-core": "^3.6.7",
     "graphql": "^16.4.0"
   },
   "devDependencies": {
