--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "apollo-server": "^3.6.7",
     "apollo-server-core": "^3.6.7",
-    "graphql": "^16.4.0"
+    "graphql": "^16.4.0",
+    "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
